# wazo-bus

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  Jenkinsfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  zuul.yaml
contribs/: Dockerfile  README.md  asyncapi-template.yml  documentation.py
contribs/docker/: Dockerfile
debian/: changelog  control  copyright  rules
integration_tests/: Dockerfile-bus  Makefile  entrypoint.sh  test-requirements-for-tox.txt  test-requirements.txt
integration_tests/assets/: docker-compose.documentation.override.yml  docker-compose.headers.override.yml  docker-compose.topic.override.yml  docker-compose.yml
integration_tests/docker/: Dockerfile-bus  entrypoint.sh  remote-bus-pilot.py
integration_tests/suite/: test_bus_headers.py  test_bus_middlewares.py  test_bus_routing_key.py  test_documentation.py  test_events.py  test_headers.py  test_headers_exchange.py  test_routing_key.py  test_status.py
wazo_bus/: __init__.py  base.py  consumer.py  mixins.py  publisher.py
wazo_bus/collectd/: channels.py
xivo-bus/: Makefile.pkg  setup.py
xivo-bus/debian/: copyright
xivo_bus/: __init__.py  asyncapi-template.yml  base.py  base_spec.yml  consumer.py  documentation.py  ensure.py  marshaler.py  middlewares.py  mixins.py  publisher.py  publishing_queue.py
xivo_bus/collectd/: calls.py  channels.py  common.py  switchboard.py
xivo_bus/ctl/: amqp_transport_client.py  client.py  config.py  consumer.py  exception.py  marshaler.py  producer.py
xivo_bus/ctl/rpc/: server.py  (+3 more)
(+403 files in other folders)
