[build-system]
requires = [ "setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
skip-string-normalization = true

[tool.flake8]
show-source = true
max-line-length = 99
application-import-names = "wazo_bus"
ignore = [
  "E203", # whitespace before ':'
  "E501", # line too long
  "W503", # line break before binary operator
]
exclude = [
    ".tox",
    ".eggs",
]

[tool.isort]
profile = "black"
py_version = 311

[tool.mypy]
python_version = "3.11"
show_error_codes = true
check_untyped_defs = true
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
strict_equality = true
no_warn_no_return = true
ignore_missing_imports = true
exclude = "^build/|^integration_tests/"

[[tool.mypy.overrides]]
module = [
    "*.collectd.tests.*",
    "*.tests.*",
]
ignore_errors = true
